<resources>
    <string name="app_name">Tìm chỗ nghỉ</string>
    <string name="google_api_key">AIzaSyAo7WYCW1M9simu9FdZITxBu5cNK4LpIog</string>
    <string name="google_api_server_key">AIzaSyDQXmEmE88QPW9ZbxDwcLnSaqOa37tr8mQ</string>
    <string name="gcm_sender">732884639123</string>
    <string name="facebook_app_id_new_last">1553833281298210</string>
    <string name="banner_ad_unit_id">ca-app-pub-2978251308904313/6tẽ405216989</string>
    <string name="text_title_list_tour">List Tour</string>
    <string name="text_title_feedback">Feedback</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_google">Google</string>
    <string name="text_guide_login">Sign in to plan your trips,\n save places or so on...</string>
    <string name="text_guide_sign_up">Or Sign up with your Email</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_guide_sign_in">Already have an account? Sign in</string>
    <string name="text_confirm_logout">"Do you want to log out?"</string>
    <string name="text_confirm_edit">"Do you want save ?"</string>
    <string name="text_confirm_not_change_info">"Do you cancel edit ?"</string>
    <string name="text_confirm_add_friend">"Do you want to follow?"</string>
    <string name="text_confirm_un_friend">"Do you want to unfollow ?"</string>
    <string name="text_add_friend_success">"Following success"</string>
    <string name="text_un_friend_success">"Unfollow success"</string>
    <string name="text_not_found">Place not found.</string>
    <string name="text_status_default">Hãy bắt đầu trải nghiệm</string>
    <string name="text_forgot_Password">Forgot Password?</string>
    <string name="text_passwordagain">Password again</string>
    <string name="text_email">Email</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_title_select_date_feedback">Select Date</string>
    <string name="text_send_email_success">your email had send ! check your email </string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Password Confirm</string>
    <string name="text_login">Login</string>
    <string name="text_or_continue_with">OR CONTINUE WITH</string>
    <string name="text_signup">Sign up</string>
    <string name="text_title_forgot_pass">We will send password to your email:</string>
    <string name="text_signup_success">Register success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_title_popup_send_feedback">Your Feedback</string>
    <string name="text_loading">Loading...</string>
    <string name="text_processing">Processing...</string>
    <string name="error_text_map_fragment_null">Error - Map Fragment was null.</string>
    <string name="error_text_map_null">Error - Map was null.</string>
    <string name="error_text_lbs_not_available">Sorry. Location services not available to you.</string>
    <string name="error_text_disconnected">Disconnected. Please re-connect.</string>
    <string name="error_text_network_lost">Network lost. Please re-connect.</string>
    <string name="error_text_location_null">Current location was null, enable GPS on emulator.</string>
    <string name="error_text_can_not_get_token">Can\'t get access token.</string>
    <string name="error_unknown_error">An unknown error has occurred. Please try again.</string>
    <string name="error_network">Network issue. Please check your internet connection.</string>
    <string name="text_error_connect_server">Connect to server fail</string>
    <string name="text_session_time_out">Session time out. Please login again</string>
    <string name="text_error_in_processing">Error in process. Please try again</string>
    <string name="text_title_follower_user">Followers</string>
    <string name="text_profile">Profile</string>
    <string name="text_notification">Notification</string>
    <string name="text_trips">Trips</string>
    <string name="text_collections">Collections</string>
    <string name="text_activities">Activities</string>
    <string name="text_setting">Setting</string>
    <string name="text_photo">Photo</string>
    <string name="text_follower">Follower</string>
    <string name="text_following">Following</string>
    <string name="text_map">Map</string>
    <string name="text_tour">Tour</string>
    <string name="text_collection">Collection</string>
    <string name="text_number_hotline">01289740506</string>
    <string name="text_tour_information">Info</string>
    <string name="text_tour_itinerary">Itinerary</string>
    <string name="text_tour_tourist">Tourists</string>
    <string name="text_tour_guide">Tour Guide</string>
    <string name="text_tour_notification">Notification</string>
    <string name="text_place_info">OVERVIEW</string>
    <string name="text_place_image">PHOTOS</string>
    <string name="text_place_review">REVIEW</string>
    <string name="text_ownership">By</string>
    <string name="text_default_mark">5.0</string>
    <string name="text_default_num_voted">voted</string>
    <string name="text_default_place_name">JOCO place detail</string>
    <string name="text_default_place_address">JOCO place address</string>
    <string name="text_default_place_number">(+84) 168 585 6621</string>
    <string name="text_accommodation_info">Accommodation info</string>
    <string name="text_address">Address</string>
    <string name="text_phone">Phone</string>
    <string name="text_about">About</string>
    <string name="text_website">Website</string>
    <string name="text_accommodation_position">Accommodation position</string>
    <string name="text_accommodation_introduce">Accommodation introduce</string>
    <string name="text_validate_send_feedback">You must input before send</string>
    <string name="text_check_in">Check in</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_review">Review</string>
    <string name="text_date_start">Start date: </string>
    <string name="text_title_search_tour_nearby">NEARBY TOUR</string>
    <string name="text_title_search_tour_favourite">BEST FAVORITE TOUR</string>
    <string name="text_title_search_location_nearby">NEARBY LOCATION</string>
    <string name="text_title_search_location_favourite">BEST FAVOURITE LOCATION</string>
    <string name="text_detail_default">[This place have not had overview yet!]</string>
    <string name="text_rate">Send</string>
    <string name="text_detail_rate">Rating</string>
    <string name="text_detail_latest_review">Latest reviews from Trippackers</string>
    <string name="text_comment_hint">Enter your comment!</string>
    <string name="text_comment_rated">Rated</string>
    <string name="text_comment_default_time">01/01/2016</string>
    <string name="text_album_owner">Photo from owner</string>
    <string name="text_album_joco">Photo from location</string>
    <string name="text_album_item_name">Default Name</string>
    <string name="text_full_image_create_by">By</string>
    <string name="text_full_image_create_date">Posted:</string>
    <string name="text_favourite_accommodation">Favourite accommodation</string>
    <string name="text_favourite_tour">Favourite tour</string>
    <string name="text_unit_price_usd">USD</string>
    <string name="text_unit_price_vnd">VND</string>
    <string name="text_tour_code">Tour code</string>
    <string name="text_location">Location</string>
    <string name="text_departure_day">Departure day</string>
    <string name="text_num_of_people">Num of people</string>
    <string name="text_price_tax">Price tax</string>
    <string name="text_total_price">Total price</string>
    <string name="text_include">Includes</string>
    <string name="text_exclude">Excludes</string>
    <string name="text_category">Category</string>
    <string name="text_schedule">Create a new Notification</string>
    <string name="text_send">Send</string>
    <string name="text_title_popup_view_feedback">Detail Feedback</string>
    <string name="text_message">Message</string>
    <string name="text_message_signup_success">Sign up success !!!</string>
    <string name="text_for_rated_leader">Was this helpful ?</string>
    <string name="text_like_rated_leader">Yes</string>
    <string name="text_tip">Tips</string>
    <string name="text_to_do">Things to do</string>
    <string name="text_plan">Plan</string>
    <string name="text_tour_detail">Tour detail</string>
    <string name="text_share">Share</string>
    <string name="text_my_tour">My Tours - Trips</string>
    <string name="text_statistics">Statistics</string>
    <string name="text_my_profile">Profile</string>
    <string name="text_my_activity">My Activities</string>
    <string name="text_hour">h</string>
    <string name="text_minute">m</string>
    <string name="text_discuss">Discuss</string>
    <string name="text_locations">Locations</string>
    <string name="text_tours">Tours</string>
    <string name="text_invite">Invite</string>
    <string name="text_hotline">HotLine</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_my_favourite">My Favourite</string>
    <string name="text_my_tour_trip">My Tours - Trips </string>
    <string name="text_quality_assesment">Quality assessment</string>
    <string name="text_validate_firstname">Please input first name</string>
    <string name="text_validate_lastname">Please input last name</string>
    <string name="text_validate_email_phone">Please input email or phone</string>
    <string name="text_validate_content">Please input content</string>
    <string name="text_validate_phone">Please input phone number</string>
    <string name="text_validate_phone_format">Phone must be number</string>
    <string name="text_validate_name">Please input your name</string>
    <string name="text_validate_pass">Please input password</string>
    <string name="text_validate_confirm_password">Confirm password not match password</string>
    <string name="text_validate_fortmat_email">Email wrong format! format example: example@gmail.com</string>
    <string name="regex_format_email">"^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$"</string>
    <string name="regex_format_phone_number">"^[0-9]*$"</string>
    <string name="text_please_input_date_and_time">please input date and time</string>
    <string name="text_invite_tour_success">Invite tour success</string>
    <string name="text_invite_tour_fail">Invite tour fail. Please try again.</string>
    <string name="text_request_email_forgot_pass_fail">Email wrong, please try again</string>
    <string name="text_sign_up_fail">Sign up fail, please try again</string>
    <string name="text_login_fail">Username or password wrong, please try again</string>
    <string name="text_pick_contact">Pick Contact</string>
    <string name="text_excellent">Excellent</string>
    <string name="text_good">Good</string>
    <string name="text_fair">Fair</string>
    <string name="text_bad">Bad</string>
    <string name="text_detail">Detail</string>
    <string name="text_no_data">Data is not found</string>
    <string name="text_change_password">Change password</string>
    <string name="text_current_password">Current password</string>
    <string name="text_new_password">New password</string>
    <string name="text_retype">Retype</string>
    <string name="text_to">To</string>
    <string name="text_filter_location">Filter location</string>
    <string name="text_province_famous_place">Famous place, province</string>
    <string name="text_type_profesional">Professional</string>
    <string name="text_type_native">Native</string>
    <string name="text_choose_period_of_time">Choose period of time</string>
    <string name="text_from">from</string>
    <string name="text_type_student">Student</string>
</resources>