<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/rbFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/rbPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type_profesional"/>
        <RadioButton
            android:id="@+id/rbNative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type_native"/>
        <RadioButton
            android:id="@+id/rbStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type_student"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:text="@string/text_choose_period_of_time"
            android:textColor="@color/accent_500"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/text_from"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.59"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/text_to"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>