<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/llItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginBottom="@dimen/margin_large">

    <TextView
        android:id="@+id/tvTitle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="@dimen/margin_large"
        android:text="Title"
        android:textSize="18dp"
        android:gravity="bottom"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radioExcellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_excellent"
            android:padding="@dimen/padding"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/radioGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_good"
            android:layout_weight="1.5"
            android:padding="@dimen/padding"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/radioFair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fair"
            android:layout_weight="2.9"
            android:padding="@dimen/padding"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/radioBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.9"
            android:text="@string/text_bad"
            android:padding="@dimen/padding"
            android:gravity="center"/>

    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_small"
        android:background="@color/grey_bg"/>
</LinearLayout>