<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/white">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/white"
                  android:orientation="vertical">

        <TextView
            android:id="@+id/tvNoData"
            style="@style/JocoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_no_data"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvOwnerList"
            style="@style/JocoTitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_album_owner"
            android:textAppearance="@style/Font.Roboto.Regular"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvOwnerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvPacker"
            style="@style/JocoTitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_album_joco"
            android:textAppearance="@style/Font.Roboto.Regular"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPacker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>