<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/JocoTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_pick_contact"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height_small"
            android:background="@color/grey_bg"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_search"
            android:orientation="horizontal">

            <TextView
                style="@style/JocoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_to"/>

            <com.boot.accommodation.common.control.ContactCompletionView
                android:id="@+id/edSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:padding="@dimen/padding"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height_small"
            android:background="@color/grey_bg"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_search"
            android:background="@drawable/selector_green_bg"
            android:gravity="center"
            android:text="@string/text_send"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
